HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelDim3Const/Expected.uv
//! Expected diagnostic metadata for the ParallelDim3Const rejected-source specimen.

expectedDiagnostic("E-CON-0159", "rule.20.Dim3Const-Err")
